Fix Threads name spacing

--- a/public/theme/fixes.css
+++ b/public/theme/fixes.css
@@ -103,8 +103,8 @@ div.icon-39rdLt {
 }
 
 .container-1Bj0eq>ul>li>div>div.link-1_kTxV {
-    left: 14px !important;
-    width: calc(var(--sidebar-width) - 66px)
+    left: 4px !important;
+    width: calc(var(--sidebar-width) - 72px)
 }
 
 .container-1NXEtd[aria-label*="Alexis Modern Theme"]>#channels>ul>li:nth-child(n)>div>div>.children-1MGS9G {
